# to-save

./: .gitignore  CMakeLists.txt  build.sh  command_plot.plt  etalon  gen_data  main.cpp  rebuild.sh  run.sh  test.sh
GA/: GeneticAlgorithm.h
GA/Algorithms/: GAForSimpleNetwork.h  GeneralGeneticAlgorithm.h
GA/Paramertrs/: CommonParameters.cpp  CommonParameters.h  ParametrsForSimpleNetwork.cpp  ParametrsForSimpleNetwork.h
Modules/: readouts.h  reservoirs.h
Modules/CommonLayers/: PcaReducer.cpp  PcaReducer.h  SomReducer.cpp  SomReducer.h
Modules/Readouts/: LinerReadout.cpp  LinerReadout.h
Modules/Reservoirs/: ClassicEsnReservoir.cpp  ClassicEsnReservoir.h  RadialReservoir.cpp  RadialReservoir.h
Networks/: ClassicWithPca.cpp  ClassicWithPca.h  ClassicWithSom.cpp  ClassicWithSom.h  Networks.h  RadialNetwork.cpp  RadialNetwork.h  RadialWithPca.cpp  RadialWithPca.h  RadialWithSom.cpp  RadialWithSom.h  SimpleNetwork.cpp  SimpleNetwork.h  SmpleNetwork.cpp
Utils/: UtilFunctions.cpp  UtilFunctions.h  activation.cpp  activation.h  common.h  macro.h  types.h  utils.h
